# Intro_to_AI_Team_4_Final_Project

./: .deepsource.toml  .gitignore  README.md  assistant.yaml.example  pyproject.toml
scripts/: env.bash  env.fish  env.sh  env.zsh
src/: __main__.py  config.py  llm.py  logging.py  terminal.py  tools.py
term_assistant/: __main__.py  config.py  llm.py  logging.py  terminal.py  tools.py
tests/: assistant.yaml  test_config.py  test_llm.py  test_terminal.py  test_tool.py
