[tool.poetry]
name = "term-assistant"
version = "0.1.0"
description = ""
authors = ["SiriusKoan <me@siriuskoan.one>"]
readme = "README.md"
keywords = ["llm", "terminal", "cli"]
classifiers = ["Programming Language :: Python :: 3.12"]

[tool.poetry.scripts]
term-assistant = "term_assistant.__main__:cli"
envfish = { reference = "scripts/env.fish", type = "file" }
envbash = { reference = "scripts/env.bash", type = "file" }
envzsh = { reference = "scripts/env.zsh", type = "file" }

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^1.8.1"
openai = "^1.51.1"
click = "^8.2.1"
pyyaml = "^6.0.2"
colorama = "^0.4.6"

[tool.flake8]
ignore = ['E501']

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
pyright = "^1.1.401"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
