[tool.poetry]
name = "term-assistant"
version = "0.1.0"
description = "Term Assistant is a command-line tool designed to assist users with prompt-based responses from various models."
authors = ["SiriusKoan <me@siriuskoan.one>"]
readme = "README.md"
keywords = ["llm", "terminal", "cli"]
classifiers = ["Programming Language :: Python :: 3.10"]

[tool.poetry.scripts]
term-assistant = "term_assistant.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.0"
pyyaml = "^6.0.2"
colorama = "^0.4.6"
litellm = "1.55.12"
libtmux = "^0.46.1"

[tool.flake8]
ignore = ['E501', 'E704']

[tool.isort]
profile = "black"
src_paths = ["term_assistant", "tests"]

[tool.pyright]
include = ["term_assistant", "tests"]
exclude = ["experiment"]
reportMissingImports = "error"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
pyright = "^1.1.401"
isort = "^6.0.1"
pyinstrument = "^5.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
